examples/type_system/failing/02_runtime_boundary_arg_violation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/02_runtime_boundary_arg_violation.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `typed_add`.
//
//   examples/type_system/failing/02_runtime_boundary_arg_violation.flx:45:11
//    |
// 38 | fn typed_add(a: Int, b: Int) -> Int {
//    | ----------------------------------- `typed_add` expects `Int` as the 1st parameter
// 39 |     a + b
// 40 | }
// ... |
// 43 |
// 44 |
// 45 | typed_add(dynamic, 1)
//    |           ^^^^^^^
//    |           ------- this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 1st argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn old(v) {
    v
}

fn typed_add(a: Int, b: Int) -> Int {
    a + b
}

let dynamic = old("oops")

// Runtime contract violation at boundary (dynamic -> typed arg).
typed_add(dynamic, 1)
